[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanitarian-aid-openenv"
version = "1.0.0"
description = "Humanitarian Aid Allocation OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "httpx>=0.27.0"
]
